Enable show hide on hints and fix spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -289,6 +289,10 @@ input {
   color: #727C85;
 }
 
+.hint {
+  margin-bottom: 2.5em;
+}
+
 
 /* 404 Error */
 
